manifests/backend/templates/backend-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-1
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: backend
        version: v1
    spec:
      containers:
      - name: backend
        image: "backend:v1"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
