manifests/backend/templates/backend-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-1
spec:
  selector:
    app: backend
    version: v1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
