manifests/backend/templates/backend-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-2
spec:
  selector:
    app: backend
    version: v2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
